--- a/src/components/CharacterCard/CharacterCard.css
+++ b/src/components/CharacterCard/CharacterCard.css
@@ -1,10 +1,18 @@
 .card {
-
-}
-
-.photo {
-
-}
+    background: #fff;
+    border-radius: 2px;
+    height: 200px;
+    margin: 1rem;
+    position: relative;
+    width: 200px;
+    box-shadow: 0 3px 6px #999, 0 3px 6px #999;
+  }
+  
+  .card > .photo {
+    overflow: hidden;
+    text-align: center;
+    background: gray;
+  }
 
 img {
     height: 200px;
