--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -1,10 +1,25 @@
 .title {
-    width: 100%;
+    width: 68%;
     text-align: center;
-    text-decoration: underline;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 96px;
+    color: red;
+    text-shadow: 3px 3px black;
+    margin-bottom: 35px;
+    margin-top: 25px;
+    display: inline-block;
+    float: left;
+    padding-right: 25px;
+  }
+
+  #title-image {
+    width: 28%;
+    display: inline-block;
+    float: right;
   }
   
   .headline {
-  
+    margin-left: 5%;
+
   }
   
